REDID EVERYTHING to work per level

--- a/src/templates/Table.html
+++ b/src/templates/Table.html
@@ -1,9 +1,9 @@
 
-<img id="MinigameImg" src="URL">
+<h3> Level 1</h3>
 <table>
     <tr>
         <th>Name</th>
         <th>Canal</th>
-        <th>Level</th>
         <th>Score</th>
     </tr>
+
